<resources>
    <string name="home_logout">Log out</string>
    <string name="home_export">Export students</string>
    <string name="home_import">Import students</string>
    <string name="home_add_student">Add new student</string>
    <string name="home_list_students">List of Students</string>
    <string name="home_add_user">Add new user</string>
    <string name="home_list">List of System Users</string>
    <string name="name_home">User</string>
    <string name="register_name">Full name</string>
    <string name="register_number">Phone number</string>
    <string name="register_password">Password</string>
    <string name="app_name">Mid_term_Mobile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="lbl_full_name">Full Name</string>
    <string name="save">Save</string>
    <string name="age">Age</string>
    <string name="phone">Phone number</string>
    <string name="status">Status</string>
    <string name="status_normal">Normal</string>
    <string name="status_locked">Locked</string>
    <string name="st_class">Class</string>
    <string name="st_email">Email</string>
    <string name="login">Sign in</string>
    <string name="dont_acc">Not an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
</resources>