<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_profile"
    android:orientation="vertical"
    android:padding="15dp">


    <LinearLayout
        android:id="@+id/linearProfileDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/blued_radius">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:src="@drawable/back_button"/>

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="135dp"
            android:layout_height="158dp"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription"
            tools:src="@drawable/profile_img" />

        <TextView
            android:id="@+id/txt_name_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/name_home"
            tools:text="@string/name_home"
            android:textSize="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_full_name"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_full_name"
            android:textSize="20dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="16dip"
                android:text="@string/age"
                android:textSize="20dp"/>

            <NumberPicker
                android:id="@+id/txt_age"
                android:layout_width="87dp"
                android:layout_height="70dp"/>


        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="@string/phone"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="number"
            android:textSize="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dip"
                android:layout_marginTop="10sp"
                android:textSize="20dp"
                android:text="@string/status">
            </TextView>

            <RadioGroup
                android:id="@+id/rdButtonGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dip"
                    android:textSize="18sp"
                    android:text="@string/status_normal">
                </RadioButton>
                <RadioButton
                    android:id="@+id/radio_locked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/status_locked">
                </RadioButton>

            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:background="@drawable/blued_radius_10"
        android:onClick="saveStudent"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="15dp"
        />





</LinearLayout>