<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_gravity="center_vertical">

    <LinearLayout
        android:id="@+id/linearProfileDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="135dp"
            android:layout_height="158dp"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription"
            tools:src="@drawable/profile_img"/>

        <TextView
            android:id="@+id/txt_name_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/name_home"
            tools:text="@string/name_home"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/home_listUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/red_radius"
            android:drawableLeft="@drawable/baseline_people_outline_24"
            android:drawableRight="@drawable/baseline_arrow_forward_ios_24"
            android:letterSpacing="0.01"
            android:paddingStart="50dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:text="@string/home_list"
            android:textAllCaps="false"
            android:textColor="#F80606"
            android:textSize="15dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/home_addnewUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/add_user_home"
            android:drawableRight="@drawable/home_orange"
            android:text="@string/home_add_user"
            android:textColor="#F66700"
            android:background="@drawable/orange_radius"
            android:textSize="15dp"
            android:paddingStart="50dp"
            android:paddingEnd="20dp"
            android:letterSpacing="0.01"
            android:singleLine="true"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/home_ListStudents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/home_list_students"
            android:drawableRight="@drawable/home_green"
            android:text="@string/home_list_students"
            android:textColor="#00F621"
            android:background="@drawable/green_radius"
            android:textSize="15dp"
            android:paddingStart="50dp"
            android:paddingEnd="20dp"
            android:letterSpacing="0.01"
            android:singleLine="true"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/home_add_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/home_add_student"
            android:drawableRight="@drawable/home_blued"
            android:text="@string/home_add_student"
            android:textColor="#0281FF"
            android:background="@drawable/blued_radius"
            android:textSize="15dp"
            android:paddingStart="50dp"
            android:paddingEnd="20dp"
            android:letterSpacing="0.01"
            android:singleLine="true"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/home_import"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/home_import"
            android:drawableRight="@drawable/home_violet"
            android:text="@string/home_import"
            android:textColor="#8D02FF"
            android:background="@drawable/violet_radius"
            android:textSize="15dp"
            android:paddingStart="50dp"
            android:paddingEnd="20dp"
            android:letterSpacing="0.01"
            android:singleLine="true"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/home_export"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/home_export"
            android:drawableRight="@drawable/home_pink"
            android:text="@string/home_export"
            android:textColor="#EE02FF"
            android:background="@drawable/pink_radius"
            android:textSize="15dp"
            android:paddingStart="50dp"
            android:paddingEnd="20dp"
            android:letterSpacing="0.01"
            android:singleLine="true"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/home_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/home_logout"
            android:text="@string/home_logout"
            android:textColor="#000000"
            android:background="@drawable/black_radius"
            android:textSize="15dp"
            android:paddingStart="50dp"
            android:paddingEnd="20dp"
            android:letterSpacing="0.01"
            android:singleLine="true"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

</LinearLayout>