<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".edit_user_layout"
    android:padding="15dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearProfileDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/blued_radius"
        app:layout_constraintTop_toTopOf="parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/editUser_avatar"
            android:layout_width="135dp"
            android:layout_height="158dp"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription,MissingConstraints"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="0dp"
            tools:src="@drawable/profile_img"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearProfileDetails">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_full_name"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/editUser_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_full_name"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="@string/phone"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/editUser_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="number"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="@string/st_email"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/editUser_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/st_email"
            android:inputType="number"
            android:textSize="20dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="Password"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/editUser_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="number"
            android:textSize="20dp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="8dip"
        app:layout_constraintTop_toBottomOf="@+id/l1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dip"
            android:layout_marginTop="10sp"
            android:textSize="20dp"
            android:text="@string/status">
        </TextView>

        <RadioGroup
            android:id="@+id/editUser_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/editUser_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dip"
                android:textSize="18sp"
                android:text="@string/status_normal">
            </RadioButton>
            <RadioButton
                android:id="@+id/editUser_locked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/status_locked">
            </RadioButton>
        </RadioGroup>
    </LinearLayout>




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editUser_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:background="@drawable/blued_radius_10"
        android:onClick="saveStudent"
        android:text="Save"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="31dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>