<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".edit_student_layout"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/linearProfileDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/blued_radius">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/editStudent_avatar"
            android:layout_width="135dp"
            android:layout_height="158dp"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription"
            tools:src="@drawable/profile_img" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_full_name"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/editStudent_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_full_name"
            android:textSize="20dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="Date of birth"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/editStudent_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Day of birth"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="@string/st_class"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/editStudent_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/st_class"
            android:inputType="number"
            android:textSize="20dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="@string/st_email"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/editStudent_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/st_email"
            android:inputType="text"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:text="Phone number"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/editStudent_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone number"
            android:inputType="number"
            android:textSize="20dp"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editStudent_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dip"
        android:onClick="saveStudent"
        android:text="@string/save"
        android:background="@drawable/blued_radius_10"
        android:textColor="@color/white"
        android:textSize="15dp"/>

</LinearLayout>